adding highcharts block

--- a/riskpooling/templates/riskpooling/Shock.html
+++ b/riskpooling/templates/riskpooling/Shock.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content %}
-
+{% include 'riskpooling/chart.html' %}
 {% if shock_occurrence == True %}
     <p>
         A shock has hit your herd this year. As a result of this, your herd has shrunk from
